# traceback

./: .gitignore  .vscodeignore  LICENSE  README.md  package-lock.json  package.json  webpack.config.js
.github/workflows/: build.yaml
cli/: .gitignore  .python-version  README.md  pyproject.toml
cli/traceback/: __init__.py  main.py
cli/traceback/tools/: claude_client.py  commands.py
cli/traceback/tui/: app.py
cli/traceback_old/tools/: analysis_tools.py  claude_client.py
cli/traceback_old/tui/: app.py
cli/tracebackapp.bak/: main.py
cli/tracebackapp.bak/tools/: analyzer.py  claude_client.py
cli/tracebackapp.bak/tui/: app.py
cli/tracebackapp/tools/: analysis_tools.py  claude_client.py  commands.py
cli/tracebackapp/tui/: app.py
media/: main.css  reset.css  vscode.css
src/: callStackExplorer.ts  claudeService.ts  codeLocationsExplorer.ts  decorations.ts  extension.ts  llmService.ts  logDetailViewProvider.ts  logExplorer.ts  ollamaService.ts  pinnedLogsExplorer.ts  pinnedLogsProvider.ts  processor.ts  rustLogParser.test.ts  rustLogParser.ts  settingsView.ts  spanVisualizerPanel.ts  variableDecorator.ts  variableExplorer.ts  vectorSearch.ts
vscode-extension/: .vscodeignore  CONTRIBUTING.md  package-lock.json  package.json  webpack.config.js
vscode-extension/src/: extension.ts  processor.ts  settingsView.ts  spanVisualizerPanel.ts
