[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tracebackapp"
version = "0.1.0"
description = "A terminal-based AI chat interface"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Traceback Team"}
]
dependencies = [
    "textual>=0.38.1",
    "typer[all]>=0.9.0",
    "requests>=2.30.0",
    "anthropic>=0.18.0",
]

[project.scripts]
traceback = "tracebackapp.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "ruff>=0.0.272",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "B", "I"]